# juce-webview-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
res/: index.html  style.css
res/js/: index.js  script.js
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
